# cg50-blockblast

./: .gitignore  BlockBlast.g3a  CMakeLists.txt  README.md  test.sh  todo
src/: font.c  font.h  game_state.c  game_state.h  grid.c  grid.h  input_handler.c  input_handler.h  main.c  renderer.c  renderer.h  score.c  score.h  tetris_blocks.c  tetris_blocks.h
